--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
      <ul>
          <li> Vagrant </li>
-         <li> Docker : sin dolores de cabeza con sensillez </li>
+         <li> Docker : Conteirnes sin dolores de cabeza con sensillez </li>
          <li> Ansible </li>
          <li> Integración continua: madurez y productividad en el desarrollo de software </li>
      </ul>
