--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 <head>
      <meta charset = "UTF-8">
-     <title>Lista de cursos de DevOps de  Alura para principiantes </title>
+     <title>Lista de Cursos de DevOps de  Alura para principiantes </title>
 </head>
 <body>
      <ul>
