--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
          <li> Docker : Conteirnes sin dolores de cabeza con sensillez </li>
          <li> Ansible </li>
          <li> Integración continua: madurez y productividad en el desarrollo de software </li>
-         <li>Kubernetes</li>
+         <li>Kubernetes : Introducción a la orquestacion de containers. </li>
      </ul>
 </body>
 </html>
